tests/Semantic/test_2_r11.out
Error type 11 at Line 16: invoking non-function variable: compare2
