tests/Semantic/test_2_r11.spl
int compare1(int x, int y)
{
  if (x > y) {return 1;}
  else if (y > x) {return -1;}
  else {return 0;}
}
int test_2_r11(int i, int m, int n)
{
  int compare2 = 10;
  if (i == 0)
  {
    return compare1(m, n);
  }
  else
  {
    return compare2(m, n);
  }
}
